More android fixes (#33)